sandbox/output
GildedRoseTest.java:408: error: cannot find symbol
            .filter(GildedRose.isConjured())
                              ^
  symbol:   method isConjured()
  location: class GildedRose
1 error
